fix mobile view overflow-x

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -209,5 +209,14 @@
     .divider {
       margin: 16px 0;
     }
+
+    .invoice-table {
+      overflow-x: auto;
+    }
+
+    .custom-card {
+      width: 100vh;
+      overflow-x: auto;
+    }
   }
 }
